--- a/config/hypr/hyprconf/binds.conf
+++ b/config/hypr/hyprconf/binds.conf
@@ -4,7 +4,6 @@ bind = $mainMod, return, exec, kitty
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exec, wlogout -l $HOME/.config/wlogout/layout -C $HOME/.config/wlogout/style.css
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, F, fullscreen
 
 bind = $mainMod, F2, exec, zeditor ~/.config/hypr
 bind = $mainMod, backspace, exec, rofi -show drun -show-icons -icon-theme $ICON_THEME
@@ -13,7 +12,8 @@ bind = SHIFT, Print, exec, /usr/bin/screenshot full
 
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, H, togglefloating,
+bind = $mainMod, F, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
